--- a/yora-gateway/odbc.ini
+++ b/yora-gateway/odbc.ini
@@ -3,5 +3,11 @@ YORA = Used by Oracle Gateway to PostgreSQL
 
 [YORA]
 Driver = PostgreSQL
+# because SSLMODE environment variable seems to be ignored
 Sslmode=allow
+# to avoid ORA-00997: illegal use of LONG datatype
+TextAsLongVarchar=0
+# if set to 1 the logs will go to /tmp/mylog_dg4odbc_oracle13.log
+Debug = 0
+
 
